

[build-system]

requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]


name = "async-chatgpt-api"
version = "1.0.2"
description = "Async OpenAI API wrapper - [Incomplete]"

authors = [
    {name = "Rune Tech", email = "runetech2024@gmail.com"}
]

license = { file = "LICENSE" }
readme = "README.md"

dependencies = [
    "aiohttp >= 3.10.10", 
    "aiohttp_socks==0.9.0"
]
requires-python = ">=3.11"

keywords = ["chatgpt", "api", "async"]

[project.urls]
Homepage = "https://github.com/runetech0/async-chatgpt-api"
github = "https://github.com/runetech0/async-chatgpt-api"

[tool.bumpver]
current_version = "1.0.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]



"pyproject.toml" = [
    'current_version = "{version}"',
]

"chatgpt/__init__.py" = [
    "{version}"
]